# GoogleAuthMigrationReader

./: .gitignore  CHANGELOG.md  COPYING  GoogleAuthMigrationReader.cabal  README.md
src/: GoogleAuthMigration.proto  Main.hs
