cabal-version:      2.4
name:               GoogleAuthMigrationReader
version:            0.1.0.0

build-type: Custom

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
author:             Thedward Blevins
maintainer:         thedward@barsoom.net

-- A copyright notice.
copyright: COPYING
-- category:
extra-source-files: CHANGELOG.md, src/GoogleAuthMigration.proto

custom-setup
  setup-depends: base, Cabal, proto-lens-setup

library
  hs-source-dirs: src
  exposed-modules: Proto.GoogleAuthMigration, Proto.GoogleAuthMigration_Fields
  autogen-modules: Proto.GoogleAuthMigration, Proto.GoogleAuthMigration_Fields
  build-depends: base ^>=4.14.3.0, proto-lens-runtime, 
  default-language: Haskell2010
  build-tool-depends: proto-lens-protoc:proto-lens-protoc

executable google-auth-read-export
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules: Proto.GoogleAuthMigration, Proto.GoogleAuthMigration_Fields

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    -- autogen-modules: Proto.GoogleAuthMigration, Proto.GoogleAuthMigration_Fields
    -- other-modules: Proto.GoogleAuthMigration, Proto.GoogleAuthMigration_Fields 
    build-depends:    base ^>=4.14.3.0, GoogleAuthMigrationReader, sandi, microlens, proto-lens, modern-uri, text, bytestring
    hs-source-dirs:   src
    default-language: Haskell2010
